--- a/DotNettyRpc/DotNettyRpc.Library/packages.config
+++ b/DotNettyRpc/DotNettyRpc.Library/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="DotNetty.Buffers" version="0.6.0" targetFramework="net452" />
   <package id="DotNetty.Codecs" version="0.6.0" targetFramework="net452" />
+  <package id="DotNetty.Codecs.Protobuf" version="0.6.0" targetFramework="net452" />
   <package id="DotNetty.Common" version="0.6.0" targetFramework="net452" />
   <package id="DotNetty.Handlers" version="0.6.0" targetFramework="net452" />
   <package id="DotNetty.Transport" version="0.6.0" targetFramework="net452" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net452" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net452" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net452" />
